...
        
        if isLastQuestion() {
            statisticService.store(correct: correctAnswers, total: questionsAmount)
            let bestGame = statisticService.bestGame
            let message = "Ваш результат: \(correctAnswers)/\(questionsAmount)\nКоличество сыгранных квизов: \(statisticService.gamesCount)\nРекорд: \(bestGame.correct)/\(questionsAmount) (\(bestGame.date.dateTimeString))\nСредняя точность: \(String(format: "%.2f", statisticService.totalAccuracy))%"
            let title = "Этот раунд окончен!"
            let buttonText = "Сыграть еще раз"
            let statistic = AlertModel(title: title,
                                       message: message,
                                       buttonText: buttonText, context: .gameOver) { [weak self] in
                guard let self else { return }
                self.restartQuiz()
            }
...
